--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
 <h1>hello</h1>
-<h2><%= @tittle %></h2>
+<h2><%= @article.tittle %></h2>
+<h2><%= @article.content %></h2>
 
 <%= link_to 'About', about_path %>
