--- a/app/assets/stylesheets/article.scss
+++ b/app/assets/stylesheets/article.scss
@@ -8,7 +8,7 @@ $avatar-size: 32px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   position: relative;
 
-  &_title {
+  &_tittle {
     font-size: 22px;
   }
 
