--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@import "variables";
 
 $avatar-size: 40px;
 $header-padding-y: 16px;
@@ -10,7 +10,7 @@ $header-padding-y: 16px;
   padding: $header-padding-y 16px;
   font-weight: bold;
 
-  &_pageTitle {
+  &_pageTittle {
     color: white;
     line-height: $avatar-size;
     font-size: $font-lg;
