--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -9,7 +9,7 @@
   </div>
 
   <% @articles.each do |article| %>
-    <%= link_to article_path(id: article.id) do%>
+    <%= link_to article_path(article) do %>
       <div class="card">
         <div class="card_image">
           <%= image_tag 'eyecatch1.png' %>
@@ -31,7 +31,11 @@
           </div>
         </div>
       </div>
-      <% end %>
+    <% end %>
   <% end %>
-
-
+  <%= link_to new_article_path do %>
+    <div class="float_btn">
+      <i class="fa fa-plus"></i>
+    </div>
+  <% end %>
+</div>
