--- a/app/views/articles/_form.html.haml
+++ b/app/views/articles/_form.html.haml
@@ -4,6 +4,10 @@
       %li= message
   = form_with(model: article, url: articles_path, method: 'post', local: true) do |f|
     %div
+      = f.label :eyecatch, 'アイキャッチ'
+    %div
+      = f.file_field :eyecatch
+    %div
       = f.label :tittle, 'タイトル'
     %div
       = f.text_field :tittle, class: 'text'
